# duckdb-arrow

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakeUserPresets.json  Makefile  README.md  extension_config.cmake  test_local.sh
.github/workflows/: MainDistributionPipeline.yml  NodeJS.yml  Python.yml
benchmark/: lineitem.py
data/: fruit.arrow  test.arrow
data/multifile/: different_order.arrows  different_type.arrows  different_type_int.arrows  different_type_order.arrows  fruit_extra.arrows
data/multifile/glob/: f1.arrow  f3.arrow
data/multifile/hive/part=a/: f2.arrow
docs/: UPDATING.md
scripts/: setup-custom-toolchain.sh
src/: nanoarrow_extension.cpp  nanoarrow_ipc.cpp  read_arrow.cpp  read_arrow_stream.cpp  read_arrow_stream2.cpp  write_arrow_stream.cpp
src/file_scanner/: arrow_file_scan.cpp  arrow_multi_file_info.cpp
src/include/: nanoarrow_errors.hpp  nanoarrow_extension.hpp  read_arrow.hpp  read_arrow_stream.hpp  read_arrow_stream2.hpp  write_arrow_stream.hpp
src/include/file_scanner/: arrow_file_scan.hpp  arrow_multi_file_function_data.hpp  arrow_multi_file_info.hpp
src/include/ipc/: array_stream.hpp  stream_factory.hpp  stream_reader.hpp
src/include/ipc/stream_reader/: base_stream_reader.hpp  ipc_buffer_stream_reader.hpp  ipc_file_stream_reader.hpp  stream_reader.hpp
src/include/table_function/: arrow_ipc_function_data.hpp  read_arrow.hpp  scan_arrow_ipc.hpp
src/include/writer/: arrow_stream_writer.hpp  column_data_collection_serializer.hpp  to_arrow_ipc.hpp
src/ipc/: array_stream.cpp  ipc_buffer_stream_reader.cpp  ipc_file_stream_reader.cpp  stream_factory.cpp  stream_reader.cpp
src/ipc/stream_reader/: base_stream_reader.cpp  ipc_buffer_stream_reader.cpp  ipc_file_stream_reader.cpp  stream_reader.cpp
src/scanner/: read_arrow.cpp  read_ipc_buffer.cpp  scan_arrow_ipc.cpp
src/writer/: arrow_stream_writer.cpp  column_data_collection_serializer.cpp  to_arrow_ipc.cpp  write_arrow_stream.cpp
test/: README.md
test/nanoarrow/: to_arrow_ipc.test
test/nodejs/: arrow_test.js
test/python/: conftest.py  requirements-dev.txt  test_arrow_ipc_scan.py  test_arrow_ipc_writer.py  test_integration.py
test/sql/: arrow_testing.test  multifile_reading.test  nanoarrow.test  read_arrow.test  read_arrow_file.test  read_arrow_stream.test  read_arrow_stream2.test  test.arrows  test_copy_to.test  to_arrow_ipc.test  write_arrow_stream.test
